# A.R.MARIUS

./: .env.sample  .gitignore  MY_DEMAND.md  PROJECT_DESCRIPTION.md  README.md  ROADMAP.md  SPRINT_PLAN.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/armarius/: __init__.py  main.py  seed.py
backend/armarius/application/ports/: adapter.py  artifact_store.py  event_bus.py  liveness_probe.py  task_trace.py  unit_of_work.py
backend/armarius/application/use_cases/: artifacts.py  auth.py  commission.py  enrollment.py  labels.py  leader_chat.py  liveness.py  liveness_watchdog.py  mariuses.py  onboarding.py  onboarding_brain.py  onboarding_session.py  projects.py  runs.py  skills.py  tasks.py  threads.py  types.py  wake_engine.py  workspace_agent.py  workspaces.py
backend/armarius/domain/entities/: artifact.py  checklist_item.py  comment.py  commission.py  label.py  leader_chat.py  marius.py  onboarding.py  project.py  role.py  run.py  seat_grant.py  session.py  skill.py  task.py  task_dependency.py  task_participant.py  user.py  wakeup.py  workspace.py
backend/armarius/domain/repositories/: repositories.py
backend/armarius/domain/services/: agent_prompt.py  leader_chat_prompt.py  liveness_fsm.py  project_key.py  project_rules.py  wake_policy.py  wake_prompt.py
backend/armarius/infrastructure/adapters/: echo.py  hermes_gateway.py  liveness_probe.py  registry.py
backend/armarius/infrastructure/alembic/: env.py
backend/armarius/infrastructure/alembic/versions/: 468899ef9a27_sprint3_roles_seat_grants_project_brief_.py  a1b2c3d4e5f6_task_definition_fields.py  a1c4e8b2d6f9_drop_commission_and_idle.py  a40098b66ac7_baseline_schema.py  b7e3a1c5d9f0_sprint8_workspace_agent_pointer.py  b8d4e2a1c3f7_task_identifier.py  c3a7d9e1b2f4_sprint4_labels.py  c3f8a2d1e7b9_skill_installs.py  c9e5f3a7b1d4_project_key_and_seq.py  d1a7c2e4b6f8_task_dependencies.py  d5b1f0a2c9e7_sprint5_commission_sessions.py  e2b9c7a4f1d8_merge_role_description.py  e8c4f1a9d3b2_sprint7_onboarding_sessions.py  (+2 more)
backend/armarius/infrastructure/database/: engine.py  migrations.py  models.py
backend/armarius/infrastructure/events/: in_memory_bus.py  task_trace.py  topic_bus.py
backend/armarius/infrastructure/persistence/: mappers.py  repositories.py  unit_of_work.py
backend/armarius/infrastructure/security/: jwt.py  password.py
backend/armarius/infrastructure/store/: local_store.py  minio_store.py
backend/armarius/presentation/: container.py  deps.py  errors.py  schemas.py
backend/armarius/presentation/api/: agent.py  auth.py  commission.py  events.py  health.py  leader_chat.py  onboarding.py  projects.py  tasks.py  trace.py  workspaces.py
backend/armarius/shared/: clock.py  config.py  logging.py
backend/static/skills/armarius-http/: SKILL.md
backend/static/skills/armarius-mcp/: SKILL.md
backend/tests/: conftest.py  test_agent_prompt_footer.py  test_agent_ws_guard.py  test_artifacts_api.py  test_auth.py  test_commission_api.py  test_commission_service.py  test_dependencies_api.py  test_enrollment_service.py  test_entity_crud.py  test_events_api.py  test_gateway_health_probe.py  test_health.py  test_hermes_adapter.py  test_integration_commission.py  test_integration_leader_chat.py  test_integration_wake.py  test_invite_fsm.py  test_invite_service.py  test_labels_api.py  test_leader_chat_api.py  test_leader_chat_prompt.py  test_liveness_engine.py  test_liveness_fsm.py  test_liveness_watchdog.py  test_mariuses_api.py  test_migration_schema_parity.py  test_migrations.py  test_onboarding_api.py  test_onboarding_brain.py  test_onboarding_service.py  test_project_identifier.py  test_project_key.py  test_project_rules.py  test_project_service.py  test_projects_api.py  test_seed_parity.py  test_skills_and_agents.py  test_sql_repositories.py  test_task_dependencies.py  (+5 more)
backend/tests/support/: __init__.py  agents.py  fakes.py
mcp/: .gitignore  README.md  pyproject.toml
mcp/src/armarius_mcp/: __init__.py  __main__.py  client.py  config.py  credentials.py  http_error.py  logging_setup.py  server.py  state.py  tools.py
mcp/tests/: conftest.py  test_client.py  test_config.py  test_integration.py  test_tools.py
(+90 files in other folders)
