[project]
name = "armarius-backend"
version = "0.1.0"
description = "Armarius — provisioner for cross-team agent collaboration (Clean Architecture core API)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.131.0",
    "uvicorn[standard]==0.40.0",
    "sqlalchemy[asyncio]==2.0.46",
    "aiosqlite==0.22.1",
    "pydantic==2.12.3",
    "pydantic-settings==2.12.0",
    "sse-starlette==3.2.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.1",
    # Auth
    "python-jose[cryptography]==3.3.0",
    "bcrypt==5.0.0",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
    # i18n
    "babel==2.16.0",
    "alembic>=1.18.5",
    "minio>=7.2.20",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]==3.3.2"]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.0",
    "mypy==1.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["armarius"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic versions are generated; don't lint them.
exclude = [".venv", "armarius/infrastructure/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Invitation template contains intentionally long, copy-pasteable endpoint lines.
"armarius/application/use_cases/onboarding.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["armarius"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
