[project]
name = "armarius-mcp"
version = "0.1.0"
description = "Armarius MCP server — typed tools over the /agent/* API so an agent never curls"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3,<3",
    "httpx==0.28.1",
]

[project.scripts]
armarius-mcp = "armarius_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.0",
    "mypy==1.19.1",
    "respx==0.22.0",
    # Integration tests drive the real backend in-process via ASGITransport.
    "armarius-backend",
]

[tool.uv.sources]
armarius-backend = { path = "../backend", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/armarius_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Async tests do plain synchronous file IO on tiny local fixtures — trio/anyio Path
# would be absurd here; the blocking-IO ASYNC rules don't apply to the test suite.
"tests/**" = ["ASYNC230", "ASYNC240"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: drives the real backend in-process (opt-in, needs armarius-backend installed)",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/armarius_mcp"]
